:art: fix alignment of dropdown-content within file-list

--- a/src/open_inwoner/scss/components/File/File.scss
+++ b/src/open_inwoner/scss/components/File/File.scss
@@ -37,6 +37,9 @@
 
   &__file .dropdown {
     padding-right: var(--spacing-large);
+     .dropdown__content {
+       margin-right: var(--spacing-large);
+     }
   }
 
   &__file + .p {
